// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kbd Snapshot matches snapshot for standard shortcut 1`] = `
<kbd
  class="inline-flex items-center justify-center px-2 py-1 rounded-md text-xs font-mono font-medium bg-slate-700/50 [html:not(.dark)_&]:bg-slate-200 text-slate-300 [html:not(.dark)_&]:text-slate-700 border border-slate-600/50 [html:not(.dark)_&]:border-slate-300 shadow-sm"
>
  Cmd+K
</kbd>
`;

exports[`Kbd Snapshot matches snapshot for symbol shortcut 1`] = `
<kbd
  class="inline-flex items-center justify-center px-2 py-1 rounded-md text-xs font-mono font-medium bg-slate-700/50 [html:not(.dark)_&]:bg-slate-200 text-slate-300 [html:not(.dark)_&]:text-slate-700 border border-slate-600/50 [html:not(.dark)_&]:border-slate-300 shadow-sm"
>
  ⌘
  K
</kbd>
`;

exports[`Kbd Snapshot matches snapshot with custom class 1`] = `
<kbd
  class="inline-flex items-center justify-center px-2 py-1 rounded-md text-xs font-mono font-medium bg-slate-700/50 [html:not(.dark)_&]:bg-slate-200 [html:not(.dark)_&]:text-slate-700 border border-slate-600/50 [html:not(.dark)_&]:border-slate-300 shadow-sm text-ember-400"
>
  Enter
</kbd>
`;
